--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,21 +1,25 @@
-.header{
+.header {
     height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 30px;
 }
-.wrapper{
+
+.wrapper {
     display: flex;
-    /* flex-grow: 1; */
 }
-.store-title{
+
+.store-title {
     color: white;
     text-decoration: none;
     font-size: 24px;
     font-weight: bold;
 }
 
-/* .card-btn-wrapper{
-    justify-content: flex-end;
-} */
+
+@media (max-width: 320px) {
+    .store-title {
+        font-size: 10px;
+    }
+}
