--- a/src/pages/film-page/film-page.css
+++ b/src/pages/film-page/film-page.css
@@ -6,7 +6,7 @@
     width: 70%;
 }
 
-.film-page__right{
+.film-page__right {
     width: 30%;
 }
 
@@ -14,4 +14,12 @@
     display: flex;
     justify-content: flex-end;
     margin-top: 20px;
+}
+
+
+@media (min-width: 320px) {
+    .film-page__content {
+        display: flex;
+        flex-direction: column;
+    }
 }
