бордер топ, корзинка

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 30px;
+    border-bottom: 1px solid #ccc;
 }
 
 .wrapper {
@@ -15,11 +16,4 @@
     text-decoration: none;
     font-size: 24px;
     font-weight: bold;
-}
-
-
-@media (max-width: 320px) {
-    .store-title {
-        font-size: 10px;
-    }
 }
