--- a/src/components/cart-menu/cart-menu.css
+++ b/src/components/cart-menu/cart-menu.css
@@ -2,20 +2,20 @@
     position: absolute;
     top: 30px;
     left: -300px;
-    background-color: rgb(36, 37, 41);
     width: 400px;
     padding: 10px 20px;
     z-index: 2;
-    border-radius: 15px;
+    border: 0.5px solid white;
+    backdrop-filter: blur(30px);
 }
 
-.cartModal {
+.cart-modal {
     margin-top: 20px;
     padding: 20px 0;
     border-top: 1px solid rgba(255, 255, 255, 0.4);
 }
 
-.cartModal-totalPrice{
+.cart-modal__total-price{
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
