--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,15 @@ a {
 .secondary-text {
     color: rgb(83, 83, 83);
 }
+
+@media (max-width: 390px) {
+
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    .App {
+        padding: 0;
+    }
+}
