--- a/src/components/cart-menu/cart-menu.css
+++ b/src/components/cart-menu/cart-menu.css
@@ -20,3 +20,17 @@
     justify-content: space-between;
     margin-bottom: 15px;
 }
+
+
+@media (max-width:420px) {
+    .cart-menu {
+        width: 95%;
+        position: fixed;
+        left: 10px;
+        top: 50px;
+    }
+    .close-btn{
+        float: right;
+        text-decoration: underline;
+    }
+}
