--- a/src/pages/film-page/film-page.css
+++ b/src/pages/film-page/film-page.css
@@ -6,6 +6,11 @@
     width: 70%;
 }
 
+iframe {
+    width: 90%;
+    height: 400px;
+}
+
 .film-page__right {
     width: 30%;
 }
@@ -14,4 +19,42 @@
     display: flex;
     justify-content: flex-end;
     margin-top: 20px;
+}
+
+
+@media (max-width: 420px) {
+    .film-page {
+        margin-left: 15px;
+    }
+
+    .film-page__content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    iframe {
+        width: 90%;
+        height: 200px;
+        margin: 20px 0;
+    }
+
+    .film-page__left {
+        width: 100%;
+    }
+
+    .class-for-responsive {
+        display: none;
+    }
+
+    .film-page__right {
+        width: 90%;
+    }
+
+    .secondary-text {
+        margin: 15px 0;
+    }
+
+    .film-page__buy-film {
+        margin-bottom: 50px;
+    }
 }
