--- a/src/components/cart-item/cart-item.css
+++ b/src/components/cart-item/cart-item.css
@@ -16,11 +16,18 @@
 }
 
 .cart-image {
-    width: 50px;
-    height: 30px;
-    border: 1px solid aqua;
+    width: 60px;
+    height: 40px;
+    margin-right: 10px;
+    border: 1px solid white;
 }
 
 .btnDelete {
     cursor: pointer;
+}
+
+@media (max-width: 420px) {
+    .cart-image {
+        margin-right: 10px;
+    }
 }
