--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 30px;
     margin-bottom: 30px;
     border-bottom: 1px solid #ccc;
 }
