--- a/src/pages/film-page/film-page.css
+++ b/src/pages/film-page/film-page.css
@@ -21,8 +21,16 @@ iframe {
     margin-top: 20px;
 }
 
+.page {
+    padding: 0 110px 0 20px;
+}
+
 
 @media (max-width: 420px) {
+    .page {
+        padding: 0;
+    }
+
     .film-page {
         margin-left: 15px;
     }
