--- a/src/pages/order-page/order-page.css
+++ b/src/pages/order-page/order-page.css
@@ -1,6 +1,8 @@
 .order-item {
     display: flex;
     margin-bottom: 30px;
+    padding-bottom: 10px;
+    border-bottom: 0.5px solid rgb(61, 61, 61);
 }
 
 .order-item__cover {
@@ -9,6 +11,7 @@
 }
 
 .order-item__title {
+    margin-left: 100px;
     font-size: 24px;
     font-weight: bold;
 }
@@ -17,4 +20,60 @@
     font-size: 24px;
     font-weight: bold;
     margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.order-page {
+    margin: 0 50px;
+}
+
+
+.order-page__right {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+.buy-btn {
+    width: 100px;
+    height: 30px;
+    background: rgb(80, 16, 43);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+.buy-btn:hover {
+    opacity: 0.6;
+}
+
+.order-item__description {
+    width: 600px;
+    font-size: 14px;
+    color: rgb(129, 129, 129);
+}
+
+.order-item__description-title {
+    margin: 20px 0 5px 0;
+    font-size: 17px;
+}
+
+.order-not {
+    text-align: center;
+}
+
+@media (max-width: 420px) {
+    .order-item{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .order-item__title {
+        margin-left: 0;
+    }
 }
