--- a/src/components/film-item/film-item.css
+++ b/src/components/film-item/film-item.css
@@ -10,7 +10,7 @@
     margin-bottom: 30px;
     margin-right: 5px;
     margin-left: 40px;
-    border: 0.5px solid;
+    border: 0.5px solid rgb(107, 107, 107);;
 }
 
 .details {
