--- a/src/components/film-item/film-item.css
+++ b/src/components/film-item/film-item.css
@@ -39,8 +39,11 @@
     bottom: -12px;
 }
 
-@media (max-width: 420px) {
+@media (max-width: 900px) {
     .film-item {
         margin-left: 25px;
+    }
+    .film-title{
+        font-size: 16px;
     }
 }
