--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Comfortaa', cursive;
 }
 
 body {
@@ -22,15 +23,3 @@ a {
     color: rgb(83, 83, 83);
 }
 
-@media (max-width: 420px) {
-
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    .App {
-        padding: 0;
-    }
-}
