--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -99,6 +99,7 @@
         justify-content: center;
         flex-direction: column;
         background-color: black;
+        opacity: 0.9;
         z-index: 50;
         transition: 1s;
         transform: translateX(-100%);
@@ -121,19 +122,28 @@
     }
 
     .nav-menu ul li {
-        margin-top: 10px;
+        margin-top: 20px;
     }
 }
 
 @media (max-width:420px) {
+
+    .store-title{
+        display: none;
+    }
+
+    .search-btn{
+        margin-right: 15px;
+    }
     .header {
+        height: 60px;
         padding: 0 15px;
         background-color: rgb(70, 20, 44);
     }
 
     .nav-menu {
-        padding-left: 30px;
-        padding-top: 50px;
+        padding-left: 20px;
+        padding-top: 90px;
         width: 60%;
         align-items: flex-start;
         justify-content: flex-start;
