--- a/src/pages/order-page/order-page.css
+++ b/src/pages/order-page/order-page.css
@@ -44,10 +44,8 @@
     align-items: center;
     cursor: pointer;
     border-radius: 3px;
-}
-
-.buy-btn:hover {
-    opacity: 0.6;
+    border: none;
+    color: white;
 }
 
 .order-item__description {
@@ -63,41 +61,61 @@
 
 .order-not {
     text-align: center;
+    width: 100%;
+    height: 100vh;
 }
 
 @media (max-width: 420px) {
+    .order-item {
+        display: flex;
+        flex-direction: column;
+    }
+
     .order-page {
         margin: 0 15px;
+        height: 100vh;
     }
-    
+
     .order-item__title {
-        width: 200px;
-        margin-right: 70px;
-        margin-left: 5px;
+        width: 300px;
+        margin: 0 30px 0 5px;
     }
-    .order-item__image{
+
+    .order-item__image {
         width: 150px;
     }
-    .order-item__cover{
+
+    .order-item__cover {
         margin-right: 5px;
     }
-    .film__title{
+
+    .film__title {
         font-size: 12px;
     }
-    .order-item__description-title{
+
+    .order-item__description-title {
         font-size: 10px;
     }
-    .order-item__description{
+
+    .order-item__description {
         font-size: 10px;
     }
+
     .none {
         display: none;
     }
-    .order-item__price{
+
+    .order-item__price {
         font-size: 10px;
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-end;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .resp-order {
+        display: flex;
+    }
+    .delete-icon {
+        font-size: 20px;
     }
 }
