--- a/src/components/film-item/film-item.css
+++ b/src/components/film-item/film-item.css
@@ -7,10 +7,8 @@
     border-radius: 9px;
     cursor: pointer;
     position: relative;
-    margin-bottom: 30px;
-    margin-right: 5px;
-    margin-left: 40px;
-    border: 0.5px solid rgb(107, 107, 107);;
+    margin: 0 10px 30px 30px;
+    border: 0.5px solid rgb(107, 107, 107);
 }
 
 .details {
@@ -19,7 +17,6 @@
 
 .film-title {
     font-size: 18px;
-    /* font-weight: bold; */
 }
 
 .film-genre {
@@ -43,7 +40,8 @@
     .film-item {
         margin-left: 25px;
     }
-    .film-title{
+
+    .film-title {
         font-size: 16px;
     }
 }
