--- a/src/pages/order-page/order-page.css
+++ b/src/pages/order-page/order-page.css
@@ -3,6 +3,11 @@
     margin-bottom: 30px;
     padding-bottom: 10px;
     border-bottom: 0.5px solid rgb(61, 61, 61);
+
+}
+
+.resp-order {
+    display: flex;
 }
 
 .order-item__cover {
@@ -56,7 +61,9 @@
 
 .order-item__description-title {
     margin: 20px 0 5px 0;
-    font-size: 17px;
+    font-size: 13px;
+    font-weight: normal;
+    color: aliceblue;
 }
 
 .order-not {
@@ -115,6 +122,7 @@
     .resp-order {
         display: flex;
     }
+
     .delete-icon {
         font-size: 20px;
     }
