--- a/src/pages/home-page/home-page.css
+++ b/src/pages/home-page/home-page.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
 }
 
-.global-margin{
+.global-margin {
     margin: 0 30px 30px 30px;
 }
 
@@ -11,22 +11,31 @@
     margin-top: 50px;
 }
 
-.news{
+.news {
     margin-bottom: 50px;
 }
+
 .news::after {
     content: 'news';
     width: 90px;
     display: inline-block;
     background-color: red;
     font-size: 25px;
-    border-top-right-radius:50px;
+    border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
     padding-left: 10px;
 }
 
-.section-one__items{
+.section-one__items {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    gap: 15px;
+    /* gap: 50px; */
+}
+
+@media (max-width: 420px) {
+    .global-margin {
+        margin: 0;
+        margin-left: 20px;
+    }
 }
