--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,9 @@ a {
 
 @media (max-width: 420px) {
     body{
-        background: url(./fim-covers/background-phone.webp);
+        /* background: url(./fim-covers/background-phone.webp); */
         /* backdrop-filter: blur(20px); */
+        background: rgb(41, 41, 101);
     }
 }
 
